SIEW-129 Fix "Insert (image) to page" button not visible in IE

--- a/assets/source/sass/admin/_media.scss
+++ b/assets/source/sass/admin/_media.scss
@@ -13,3 +13,7 @@
 .media-menu > .separator {
     display: none;
 }
+
+.media-toolbar-secondary {
+    width: 80%;
+}
